# Content-Management-System

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  implementation_plan.md  project_spec.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260519_0f78714ce661_initial_schema.py  20260519_92ac73fb93db_bootstrap.py  20260520_882961d153d9_auth_rename_magic_links_to_one_time_.py  20260521_40d16053cb3d_phase2_add_location_photos_table_.py  20260521_a4f1c0e02b3a_drop_category_set_stage.py  20260521_b7e2d18f4a91_add_avatar_url_to_users.py  20260521_c2e80f44a911_phase3_google_drive.py  20260521_d7b1f2a3c855_phase3_notification_prefs.py  20260525_b3f8c5d1a7e9_phaseb_projects_not_null_drop_legacy_stage.py  20260525_c4d7e2a1f8b3_phaseb_department_scoped_notifications.py  20260525_d5e8f2a9c1b6_phasec_marketing_template_participants_terminology.py  20260525_e8f3c1a2b9d4_phasea_multi_business_scaffolding.py  20260525_f1c7a4e9b2d6_phaseb_migrate_real_estate_to_content_creation.py  20260526_a1b9d3e7c5f2_drop_department_stages_table.py  20260526_abe94244ee2f_add_business_logo_object_name.py  20260526_d772f245fe78_drop_capability_columns.py  20260527_2a5d57922e06_board_flow_stage_rename.py  20260527_513147b3dbf6_backfill_renamed_role_perms.py  20260527_552b325ccb2f_project_stage_assignments.py  (+18 more)
app/: __init__.py  config.py  main.py
docs/: capabilities.md
frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
infra/: gcs-cors-dev.json
scripts/: check-no-raw-fetch.sh  export_openapi.py  gen_token_encryption_key.py  gen_vapid_keys.py  seed_demo.py  seed_templates.py  setup_gmail_oauth.py
tests/: conftest.py  test_activity.py  test_auth.py  test_dashboard.py  test_drive.py  test_edits.py  test_locations_cast_shoots.py  test_notification_prefs.py  test_permissions.py  test_projects.py  test_scripts.py  test_smoke.py
(+343 files in other folders)
