[project]
name = "sons-realestate-cms"
version = "0.1.0"
description = "Content production CRM for Sons Real Estate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "google-cloud-storage>=2.18.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "codespell>=2.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.1",
    "types-passlib",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "TID", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*", "google.cloud.*", "arq.*", "pywebpush.*", "slowapi.*"]
ignore_missing_imports = true

[tool.codespell]
skip = "*.lock,uv.lock,pnpm-lock.yaml,*.min.js,*.min.css,frontend/.next/**,frontend/node_modules/**,frontend/public/**,.git/**,frontend/messages/nl.json,project_spec.md"
ignore-words-list = "te,categorie,onze,dele"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
